adicionando projeto page-sell

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matheus</title>
     <!-- Link css -->
-    <link rel="stylesheet" href="/CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
     <!-- Link swiper css-->
-    <link rel="stylesheet" href="/CSS/swiperstyle.css" />
+    <link rel="stylesheet" href="./CSS/swiperstyle.css" />
     <!-- Box icons -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -50,7 +50,8 @@
       </div>
       <div class="home-text"> 
        <h3>Olá</h3>
-       <h2> Me chamo <span class="color">Matheus</span></h2>
+       <h2> Me chamo <br>
+        <span class="color">Matheus</span></h2>
        <p>Eu sou desenvolvedor <span class="color">Front-end</span></p>
         <!-- Social -->
         <div class="social"> 
@@ -70,7 +71,7 @@
       <div class="about-data">
        <span>Sobre mim</span>
        <h2>Desenvolvedor Front-end</h2> <br>
-       <a href="/file/Desenvolvedor Fron-end.pdf" class="btn" download="Desenvolvedor Fron-end">
+       <a href="/file/Desenvolvedor Fron-end.pdf" class="btn" downLoad="Desenvolvedor Fron-end">
         Baixar Currículo
         <i class='bx bxs-download'></i>
       </a>
@@ -89,17 +90,17 @@
       <!-- Portfolio content -->
       <div class="portfolio-content">
         <div class="portfolio-box">
-          <img src="/img/Em breve.png" alt="" class="portfolio-img" /> 
+          <img src="/img/sell.png" alt="page-sell" class="portfolio-img" /> 
           <!-- Overlay -->
           <div class="portfolio-overlay">
-            <h2></h2>
-            <a href="#">
-              <i class='bx bx-link-alt'></i>
+            <h2>Página de vendas</h2>
+            <a href="https://devfront-end.netlify.app/">
+              <i class='bx bx-link-alt'>Acessar</i>
             </a>
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="/img/Em breve.png" alt="" class="portfolio-img" /> 
+          <img src="/img/Em breve.png" alt="breve" class="portfolio-img" /> 
           <!-- Overlay -->
           <div class="portfolio-overlay">
             <h2></h2>
@@ -112,7 +113,7 @@
     </section>
     <!-- knowledge -->
     <section class="projects container" id="projects">
-      <h2 class="heading">Conhecimentos</h2>
+      <h4 class="heading">Conhecimentos</h4>
       <!-- knowledge content -->
       <div class="projects-content">
         <div class="projects-box">
