--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
       <div class="about-data">
        <span>Sobre mim</span>
        <h2>Desenvolvedor Front-end</h2> <br>
-       <a href="/file/Desenvolvedor Fron-end.pdf" class="btn" downLoad="Desenvolvedor Fron-end">
+       <a href="http://127.0.0.1:5500/file/Desenvolvedor%20Fron-end.pdf" class="btn" download="Desenvolvedor Front-end matheus sousa silva">
         Baixar Currículo
-        <i class='bx bxs-download'></i>
-      </a>
+       </a>
       </div>
       <div class="about-text">
         <p>Sou uma pessoa que presta atenção aos detalhes e sempre e sempre estou em busca de conhecimento.
@@ -90,7 +89,7 @@
       <!-- Portfolio content -->
       <div class="portfolio-content">
         <div class="portfolio-box">
-          <img src="/img/sell.png" alt="page-sell" class="portfolio-img" /> 
+          <img src="./img/sell.png" alt="page-sell" class="portfolio-img" /> 
           <!-- Overlay -->
           <div class="portfolio-overlay">
             <h2>Página de vendas</h2>
@@ -100,7 +99,7 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="/img/Em breve.png" alt="breve" class="portfolio-img" /> 
+          <img src="./img/Em breve.png" alt="breve" class="portfolio-img" /> 
           <!-- Overlay -->
           <div class="portfolio-overlay">
             <h2></h2>
