--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
        <span>Sobre mim</span>
        <h2>Desenvolvedor Front-end</h2> <br>
        <a href="https://drive.google.com/u/0/uc?id=12OpNjjGxeBh6emXSRgMrsKl1hi4UzvfF&export=download" class="btn" download="Desenvolvedor Front-end Matheus sousa silva">
-        Baixar Currículo
+        Meu Currículo
        </a>
       </div>
       <div class="about-text">
