--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="about-data">
        <span>Sobre mim</span>
        <h2>Desenvolvedor Front-end</h2> <br>
-       <a href="http://127.0.0.1:5500/file/Desenvolvedor%20Fron-end.pdf" class="btn" download="Desenvolvedor Front-end matheus sousa silva">
+       <a href="https://drive.google.com/u/0/uc?id=12OpNjjGxeBh6emXSRgMrsKl1hi4UzvfF&export=download" class="btn" download="Desenvolvedor Front-end Matheus sousa silva">
         Baixar Currículo
        </a>
       </div>
@@ -99,12 +99,12 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="./img/Em breve.png" alt="breve" class="portfolio-img" /> 
+          <img src="./img/ecommerce.png" alt="my-ecommerce" class="portfolio-img" /> 
           <!-- Overlay -->
           <div class="portfolio-overlay">
-            <h2></h2>
-            <a href="#">
-              <i class='bx bx-link-alt'></i>
+            <h2>Ecommerce</h2>
+            <a href="https://mshop-ecommerce.netlify.app/">
+              <i class='bx bx-link-alt'>Acessar</i>
             </a>
           </div>
         </div>
