--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <img src="./img/ecommerce.png" alt="my-ecommerce" class="portfolio-img" /> 
           <!-- Overlay -->
           <div class="portfolio-overlay">
-            <h2>Ecommerce</h2>
+            <h2>E-commerce</h2>
             <a href="https://mshop-ecommerce.netlify.app/">
               <i class='bx bx-link-alt'>Acessar</i>
             </a>
