adicionando projeto receitas

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="./img/ecommerce.png" alt="my-ecommerce" class="portfolio-img" /> 
+          <img src="./img/revenuesPhoto.png" alt="Revenues" class="portfolio-img" /> 
           <!-- Overlay -->
           <div class="portfolio-overlay">
-            <h2>E-commerce</h2>
-            <a href="https://mshop-ecommerce.netlify.app/">
+            <h2>Site com receitas</h2>
+            <a href="https://revenues.vercel.app/">
               <i class='bx bx-link-alt'>Acessar</i>
             </a>
           </div>
