--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
        </a>
       </div>
       <div class="about-text">
-        <p>Sou uma pessoa que presta atenção aos detalhes e sempre e sempre estou em busca de conhecimento.
-          <br> Eu gosto muito de tecnologia e quando comecei aprender a montar páginas web, percebi como é bom ver poder criar a parte visual de um site e por isso estou nessa jornada de desenvolvedor Front-end.</p>
+        <p>Sou uma pessoa que presta atenção aos detalhes e sempre estou em busca de conhecimento.
+          <br> Eu gosto de tecnologia e quando comecei a criar páginas web, percebi como é bom poder montarr a parte visual de um site e por isso estou nessa jornada de desenvolvedor Front-end.</p>
       </div>
       </div>
     </section>
@@ -136,6 +136,10 @@
         <div class="projects-box">
           <h2>Git</h2>
           <span>É um sistema de controle de versão de arquivos e isso é importante pois se houver algum problema você pode desfazer as alterações.</span>
+        </div>
+        <div class="projects-box">
+          <h2>Typescript</h2>
+          <span>o TypeScript é uma linguagem de programação que é possível definir a tipagem estática, parâmetros e retorno de funções.</span>
         </div>
         </div>
     </section>   
