--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
       <div class="about-text">
         <p>Sou uma pessoa que presta atenção aos detalhes e sempre estou em busca de conhecimento.
-          <br> Eu gosto de tecnologia e quando comecei a criar páginas web, percebi como é bom poder montarr a parte visual de um site e por isso estou nessa jornada de desenvolvedor Front-end.</p>
+          <br> Eu gosto de tecnologia e quando comecei criar páginas web, percebi como é bom montar a parte visual de um site e por isso estou nessa jornada de desenvolvedor Front-end.</p>
       </div>
       </div>
     </section>
